{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 145,
  "lineage": "f38e7559-58c8-b651-029f-4a4a4b280bc9",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkInterfaces/DevSecOps-Box-nic",
            "internal_domain_name_suffix": "pkqbyhnf2teuxaepchdzcpfpag.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/vnet_devsecops_studio_01"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-45-BE-1A",
            "name": "DevSecOps-Box-nic",
            "private_ip_address": "10.0.1.8",
            "private_ip_addresses": [
              "10.0.1.8"
            ],
            "resource_group_name": "rg_devsecops_studio",
            "virtual_machine_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Compute/virtualMachines/DevSecOps-Box"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkInterfaces/jenkins-nic",
            "internal_domain_name_suffix": "pkqbyhnf2teuxaepchdzcpfpag.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/vnet_devsecops_studio_01"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2E-D2-02",
            "name": "jenkins-nic",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "rg_devsecops_studio",
            "virtual_machine_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Compute/virtualMachines/jenkins"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkInterfaces/gitlab-nic",
            "internal_domain_name_suffix": "pkqbyhnf2teuxaepchdzcpfpag.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.9",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/vnet_devsecops_studio_01"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-4C-34-79",
            "name": "gitlab-nic",
            "private_ip_address": "10.0.1.9",
            "private_ip_addresses": [
              "10.0.1.9"
            ],
            "resource_group_name": "rg_devsecops_studio",
            "virtual_machine_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Compute/virtualMachines/gitlab"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkInterfaces/gitlab-runner-nic",
            "internal_domain_name_suffix": "pkqbyhnf2teuxaepchdzcpfpag.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/vnet_devsecops_studio_01"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-28-29-34",
            "name": "gitlab-runner-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg_devsecops_studio",
            "virtual_machine_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Compute/virtualMachines/gitlab-runner"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkInterfaces/elk-nic",
            "internal_domain_name_suffix": "pkqbyhnf2teuxaepchdzcpfpag.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/vnet_devsecops_studio_01"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-48-FB-47",
            "name": "elk-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg_devsecops_studio",
            "virtual_machine_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Compute/virtualMachines/elk"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkInterfaces/prod-nic",
            "internal_domain_name_suffix": "pkqbyhnf2teuxaepchdzcpfpag.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/vnet_devsecops_studio_01"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-82-CB-C1",
            "name": "prod-nic",
            "private_ip_address": "10.0.1.7",
            "private_ip_addresses": [
              "10.0.1.7"
            ],
            "resource_group_name": "rg_devsecops_studio",
            "virtual_machine_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Compute/virtualMachines/prod"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sg_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkSecurityGroups/sg_devsecops_studio",
            "location": "westeurope",
            "name": "sg_devsecops_studio",
            "resource_group_name": "rg_devsecops_studio",
            "security_rule": [],
            "tags": {
              "environment": "test",
              "owner": "djuhnix"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sg_inbound_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkSecurityGroups/sg_devsecops_studio/securityRules/Inbound_Allow_Bastion_SSH",
            "name": "Inbound_Allow_Bastion_SSH",
            "network_security_group_name": "sg_devsecops_studio",
            "priority": 510,
            "protocol": "Tcp",
            "resource_group_name": "rg_devsecops_studio",
            "source_address_prefix": "10.0.2.0/25",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sg_subnet",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastion_subnet",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sg_inbound_deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "10.0.1.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkSecurityGroups/sg_devsecops_studio/securityRules/Inbound_Deny_Any_Any",
            "name": "Inbound_Deny_Any_Any",
            "network_security_group_name": "sg_devsecops_studio",
            "priority": 1000,
            "protocol": "*",
            "resource_group_name": "rg_devsecops_studio",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sg_subnet",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sg_outbound_allow_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkSecurityGroups/sg_devsecops_studio/securityRules/Outbound_Allow_Subnet_Any",
            "name": "Outbound_Allow_Subnet_Any",
            "network_security_group_name": "sg_devsecops_studio",
            "priority": 500,
            "protocol": "*",
            "resource_group_name": "rg_devsecops_studio",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sg_subnet",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sg_outbound_deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkSecurityGroups/sg_devsecops_studio/securityRules/Outbound_Deny_Any_Any",
            "name": "Outbound_Deny_Any_Any",
            "network_security_group_name": "sg_devsecops_studio",
            "priority": 1000,
            "protocol": "*",
            "resource_group_name": "rg_devsecops_studio",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sg_subnet",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/publicIPAddresses/bastion_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "108.142.248.216",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "bastion_public_ip",
            "resource_group_name": "rg_devsecops_studio",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "rg_devsecops_studio",
            "virtual_network_name": "vnet_devsecops_studio"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/vnet_devsecops_studio_01",
            "name": "vnet_devsecops_studio_01",
            "resource_group_name": "rg_devsecops_studio",
            "virtual_network_name": "vnet_devsecops_studio"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sg_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/vnet_devsecops_studio_01",
            "network_security_group_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/networkSecurityGroups/sg_devsecops_studio",
            "subnet_id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/vnet_devsecops_studio_01"
          },
          "dependencies": [
            "azurerm_network_security_group.sg_subnet",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1d1ca07a-e4a5-4bc9-808f-11c7913caf06",
            "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio",
            "location": "westeurope",
            "name": "vnet_devsecops_studio",
            "resource_group_name": "rg_devsecops_studio",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/e67af30a-7aac-47a6-866a-b451f9d97018/resourceGroups/rg_devsecops_studio/providers/Microsoft.Network/virtualNetworks/vnet_devsecops_studio/subnets/vnet_devsecops_studio_01",
                "name": "vnet_devsecops_studio_01"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}